final pre demo commit

--- a/notebooks/mandate data.ipynb
+++ b/notebooks/mandate data.ipynb
@@ -368,11 +368,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "89b17d75",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State_Tribe_Territory</th>\n",
+       "      <th>County_Name</th>\n",
+       "      <th>FIPS_State</th>\n",
+       "      <th>FIPS_County</th>\n",
+       "      <th>date</th>\n",
+       "      <th>Face_Masks_Required_in_Public</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga County</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4/10/2020</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga County</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4/11/2020</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga County</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4/12/2020</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga County</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4/13/2020</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga County</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4/14/2020</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>295</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>Baldwin County</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5/6/2020</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>296</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>Baldwin County</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5/7/2020</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>Baldwin County</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5/8/2020</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>Baldwin County</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5/9/2020</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>Baldwin County</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5/10/2020</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    State_Tribe_Territory     County_Name  FIPS_State  FIPS_County       date  \\\n",
+       "0                      AL  Autauga County           1            1  4/10/2020   \n",
+       "1                      AL  Autauga County           1            1  4/11/2020   \n",
+       "2                      AL  Autauga County           1            1  4/12/2020   \n",
+       "3                      AL  Autauga County           1            1  4/13/2020   \n",
+       "4                      AL  Autauga County           1            1  4/14/2020   \n",
+       "..                    ...             ...         ...          ...        ...   \n",
+       "295                    AL  Baldwin County           1            3   5/6/2020   \n",
+       "296                    AL  Baldwin County           1            3   5/7/2020   \n",
+       "297                    AL  Baldwin County           1            3   5/8/2020   \n",
+       "298                    AL  Baldwin County           1            3   5/9/2020   \n",
+       "299                    AL  Baldwin County           1            3  5/10/2020   \n",
+       "\n",
+       "    Face_Masks_Required_in_Public  \n",
+       "0                            <NA>  \n",
+       "1                            <NA>  \n",
+       "2                            <NA>  \n",
+       "3                            <NA>  \n",
+       "4                            <NA>  \n",
+       "..                            ...  \n",
+       "295                          <NA>  \n",
+       "296                          <NA>  \n",
+       "297                          <NA>  \n",
+       "298                          <NA>  \n",
+       "299                          <NA>  \n",
+       "\n",
+       "[300 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask_orders.head(300\n",
+    "                )"
+   ]
   },
   {
    "cell_type": "code",
